--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
+.DS_Store
 node_modules/
 dist/
 build/
-.idea/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+test/unit/coverage
+
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
